# goodomics

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  PRODUCT.md  README.md  goodomics.db  goodomics.example.toml  mkdocs.yml  pyproject.toml
.agents/skills/vercel-react-best-practices/: SKILL.md
.github/workflows/: ci.yml
docker/: Dockerfile.server
docker/demo/: goodomics.toml
docs/: cli.mdx  dashboard.mdx  database-backends.mdx  deployment.mdx  development.mdx  getting-started.md  getting-started.mdx  index.md  index.mdx  mcp.mdx  report-templates.mdx  sdk.mdx  server.mdx
docs/concepts/: architecture.md  data-contracts.md
docs/interfaces/: cli.md  custom-parsers.md  dashboard.md  mcp.md  sdk-api.md  sdk.md  server.md
docs/javascripts/: search-shortcut.js
docs/operations/: database-backends.md  deployment.md  development.md
docs/reports/: configuration.md  execution.md  index.md  python-api.md  report-templates.md
docs/stylesheets/: extra.css
instructions/: DATA_MODEL.md  DOCS.md  FRONTEND.md  INSIGHTS_AND_REPORTS.md  PRODUCT.md  PYTHON.md
scripts/: build-python-packages.sh
